# cova

./: Cargo.toml  README.md  SUMMARY.md  book.toml  justfile
.github/: pull_request_template.md
.github/workflows/: bench.yml  bench_baseline.yml  bench_pr.yml  book.yaml  release.yaml  rust.yaml
cova/: Cargo.toml
cova-algebra/: Cargo.toml
cova-algebra/benches/: algebras.rs  arithmetic.rs  modules.rs  tensors.rs
cova-algebra/src/: category.rs  lib.rs
cova-algebra/src/algebras/: clifford.rs
cova-algebra/src/arithmetic/: modular.rs
cova-solver/: CHANGELOG.md  Cargo.toml
cova-solver/benches/: admm.rs  linear_programming.rs
cova-solver/examples/: admm_example.rs
cova-solver/src/: admm.rs  lib.rs  linear_programming.rs
cova-space/: CHANGELOG.md  Cargo.toml
cova-space/benches/: complexes.rs  filtration.rs  graph.rs  homology.rs  lattice.rs  sheaf.rs
cova-space/src/: cloud.rs  lattice.rs  sheaf.rs
cova-space/src/complexes/: mod.rs
cova-space/src/filtration/: vietoris_rips.rs
