[package]
name = "cova-algebra"

authors     = ["Harness Labs"]
description = "Cova's algebraic library"
edition     = "2024"
keywords    = ["mathematics", "algebra"]
license     = "AGPL-3.0"
readme      = "README.md"
repository  = "https://github.com/harnesslabs/cova"
version     = "0.2.2"

include = ["src/**/*", "Cargo.toml", "README.md", "katex-header.html"]

[dependencies]
nalgebra   = { workspace = true, features = ["std"] }
num-traits = { workspace = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "algebras"
harness = false

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "modules"
harness = false

[[bench]]
name = "tensors"
harness = false
