[package]
edition = "2024"
name    = "cova-solver"
version = "0.1.1"

authors     = ["Harness Labs"]
description = "Cova's solvers library"
keywords    = ["mathematics", "algebra", "solvers", "numerical"]
license     = "AGPL-3.0"
readme      = "README.md"
repository  = "https://github.com/harnesslabs/cova"

include = ["src/**/*", "Cargo.toml", "README.md", "katex-header.html"]

[dependencies]
clarabel     = "0.11"
cova-algebra = { workspace = true }
thiserror    = { workspace = true }
