[package]
name = "cova-space"

authors     = ["Harness Labs"]
description = "Cova's geometric and topological library"
edition     = "2024"
keywords    = ["mathematics", "topology", "geometry"]
license     = "AGPL-3.0"
readme      = "README.md"
repository  = "https://github.com/harnesslabs/cova"
version     = "0.2.3"

include = ["src/**/*", "Cargo.toml", "README.md", "katex-header.html"]

[dependencies]
# Local
cova-algebra = { workspace = true }

# External
itertools  = { workspace = true, features = ["use_std"] }
num-traits = { workspace = true }

# Optional
rayon = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile  = { workspace = true }

[[bench]]
harness = false
name    = "complexes"

[[bench]]
harness = false
name    = "filtration"

[[bench]]
harness = false
name    = "graph"

[[bench]]
harness = false
name    = "homology"

[[bench]]
harness = false
name    = "lattice"

[[bench]]
harness = false
name    = "sheaf"


[features]
parallel = ["dep:rayon"]
